// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OaksImpactSchoolQuote renders as='li' 1`] = `
<div>
  <li
    class="sc-aXZVg sc-gEvEer kTrAkM fUxOFh"
  >
    <img
      alt="TEST_ALT"
      class="sc-ba397cd3-0 dMngOi"
      data-nimg="1"
      decoding="async"
      height="3264"
      loading="lazy"
      src="https://NEXT_PUBLIC_SANITY_ASSET_CDN_HOST/images/NEXT_PUBLIC_SANITY_PROJECT_ID/NEXT_PUBLIC_SANITY_DATASET/b81ee19a35baa3192360a210fda34cc9b21f4fd6-5824x3264.jpg?w=3840&h=2152&fm=webp&q=80&fit=clip&auto=format"
      srcset="https://NEXT_PUBLIC_SANITY_ASSET_CDN_HOST/images/NEXT_PUBLIC_SANITY_PROJECT_ID/NEXT_PUBLIC_SANITY_DATASET/b81ee19a35baa3192360a210fda34cc9b21f4fd6-5824x3264.jpg?w=3840&h=2152&fm=webp&q=80&fit=clip&auto=format 1x"
      style="color: transparent;"
      width="5824"
    />
    <div
      class="sc-aXZVg sc-gEvEer eLpsLG iwFTtF"
    >
      <div
        class="sc-aXZVg sc-gEvEer jPvJsJ gWBhKY"
      >
        <h3
          class="sc-eldPxv groWut"
        >
          Ormiston Academies Trust
        </h3>
        <p
          class="sc-ikkxIA jkEPvG"
        >
          Ormiston Academies Trust supports pupils in 45 schools across secondary, primary, alternative provision and special schools.
        </p>
      </div>
      <div
        class="sc-aXZVg jgMjjt"
        style="background: rgb(217, 217, 217);"
      />
      <div
        class="sc-aXZVg sc-gEvEer jPvJsJ bktafW"
      >
        <div
          class="sc-aXZVg sc-gEvEer jPvJsJ bktafW"
        >
          <div
            class="sc-aXZVg sc-gEvEer jPvJsJ bktafW"
          >
            <div
              class="sc-aXZVg sc-gEvEer jPvJsJ jIBBQP"
            >
              <div
                class="sc-aXZVg sc-gEvEer jPvJsJ fLgPAy"
              >
                <div
                  class="sc-aXZVg sc-gEvEer bwVgbu iDBIXi"
                >
                  <div
                    class="sc-aXZVg sc-gEvEer jPvJsJ NsOKr"
                  >
                    <div
                      class="sc-aXZVg cmRFEa"
                    >
                      <div
                        class="sc-aXZVg sc-gEvEer sc-9041c11f-1 jPvJsJ NsOKr bHbhqk"
                      >
                        <p
                          class="sc-ikkxIA fqNJfa"
                        >
                          “
                          In Ormiston, we value our partnership with Oak, through which we have strengthened the R.E. curriculum in our schools, whilst contributing to a high-quality national resource for all.
                        </p>
                        <p
                          class="sc-ikkxIA fqNJfa"
                        >
                          Ormiston primary schools are using science and humanities resources to strengthen their curricular offer, and are benefitting from the high quality curriculum design, and opportunities to work in partnership with colleagues at Oak.
                          ”
                        </p>
                      </div>
                    </div>
                    <div
                      class="sc-aXZVg sc-gEvEer jPvJsJ jjyfYk"
                    >
                      <img
                        alt=""
                        class="sc-ba397cd3-0 dMngOi sc-9041c11f-0 crIFrm"
                        data-nimg="1"
                        decoding="async"
                        height="54"
                        loading="lazy"
                        src="https://NEXT_PUBLIC_SANITY_ASSET_CDN_HOST/images/NEXT_PUBLIC_SANITY_PROJECT_ID/NEXT_PUBLIC_SANITY_DATASET/d40d4c63b117e248ec11b995951aa738969531aa-54x54.png?w=128&h=128&fm=webp&q=80&fit=clip&auto=format"
                        srcset="https://NEXT_PUBLIC_SANITY_ASSET_CDN_HOST/images/NEXT_PUBLIC_SANITY_PROJECT_ID/NEXT_PUBLIC_SANITY_DATASET/d40d4c63b117e248ec11b995951aa738969531aa-54x54.png?w=64&h=64&fm=webp&q=80&fit=clip&auto=format 1x, https://NEXT_PUBLIC_SANITY_ASSET_CDN_HOST/images/NEXT_PUBLIC_SANITY_PROJECT_ID/NEXT_PUBLIC_SANITY_DATASET/d40d4c63b117e248ec11b995951aa738969531aa-54x54.png?w=128&h=128&fm=webp&q=80&fit=clip&auto=format 2x"
                        style="color: transparent;"
                        width="54"
                      />
                      <div
                        class="sc-aXZVg sc-gEvEer jPvJsJ bktafW"
                      >
                        <p
                          class="sc-ikkxIA kcINcy"
                        >
                          Tom Rees
                        </p>
                        <p
                          class="sc-ikkxIA jkEPvG"
                        >
                          CEO
                          , 
                          Ormiston Academies Trust
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`OaksImpactSchoolQuote renders correctly 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-gEvEer kTrAkM fUxOFh"
    >
      <img
        alt="TEST_ALT"
        class="sc-ba397cd3-0 dMngOi"
        data-nimg="1"
        decoding="async"
        height="3264"
        loading="lazy"
        src="https://NEXT_PUBLIC_SANITY_ASSET_CDN_HOST/images/NEXT_PUBLIC_SANITY_PROJECT_ID/NEXT_PUBLIC_SANITY_DATASET/b81ee19a35baa3192360a210fda34cc9b21f4fd6-5824x3264.jpg?w=3840&h=2152&fm=webp&q=80&fit=clip&auto=format"
        srcset="https://NEXT_PUBLIC_SANITY_ASSET_CDN_HOST/images/NEXT_PUBLIC_SANITY_PROJECT_ID/NEXT_PUBLIC_SANITY_DATASET/b81ee19a35baa3192360a210fda34cc9b21f4fd6-5824x3264.jpg?w=3840&h=2152&fm=webp&q=80&fit=clip&auto=format 1x"
        style="color: transparent;"
        width="5824"
      />
      <div
        class="sc-aXZVg sc-gEvEer eLpsLG iwFTtF"
      >
        <div
          class="sc-aXZVg sc-gEvEer jPvJsJ gWBhKY"
        >
          <h3
            class="sc-eldPxv groWut"
          >
            Ormiston Academies Trust
          </h3>
          <p
            class="sc-ikkxIA jkEPvG"
          >
            Ormiston Academies Trust supports pupils in 45 schools across secondary, primary, alternative provision and special schools.
          </p>
        </div>
        <div
          class="sc-aXZVg jgMjjt"
          style="background: rgb(217, 217, 217);"
        />
        <div
          class="sc-aXZVg sc-gEvEer jPvJsJ bktafW"
        >
          <div
            class="sc-aXZVg sc-gEvEer jPvJsJ bktafW"
          >
            <div
              class="sc-aXZVg sc-gEvEer jPvJsJ bktafW"
            >
              <div
                class="sc-aXZVg sc-gEvEer jPvJsJ jIBBQP"
              >
                <div
                  class="sc-aXZVg sc-gEvEer jPvJsJ fLgPAy"
                >
                  <div
                    class="sc-aXZVg sc-gEvEer bwVgbu iDBIXi"
                  >
                    <div
                      class="sc-aXZVg sc-gEvEer jPvJsJ NsOKr"
                    >
                      <div
                        class="sc-aXZVg cmRFEa"
                      >
                        <div
                          class="sc-aXZVg sc-gEvEer sc-9041c11f-1 jPvJsJ NsOKr bHbhqk"
                        >
                          <p
                            class="sc-ikkxIA fqNJfa"
                          >
                            “
                            In Ormiston, we value our partnership with Oak, through which we have strengthened the R.E. curriculum in our schools, whilst contributing to a high-quality national resource for all.
                          </p>
                          <p
                            class="sc-ikkxIA fqNJfa"
                          >
                            Ormiston primary schools are using science and humanities resources to strengthen their curricular offer, and are benefitting from the high quality curriculum design, and opportunities to work in partnership with colleagues at Oak.
                            ”
                          </p>
                        </div>
                      </div>
                      <div
                        class="sc-aXZVg sc-gEvEer jPvJsJ jjyfYk"
                      >
                        <img
                          alt=""
                          class="sc-ba397cd3-0 dMngOi sc-9041c11f-0 crIFrm"
                          data-nimg="1"
                          decoding="async"
                          height="54"
                          loading="lazy"
                          src="https://NEXT_PUBLIC_SANITY_ASSET_CDN_HOST/images/NEXT_PUBLIC_SANITY_PROJECT_ID/NEXT_PUBLIC_SANITY_DATASET/d40d4c63b117e248ec11b995951aa738969531aa-54x54.png?w=128&h=128&fm=webp&q=80&fit=clip&auto=format"
                          srcset="https://NEXT_PUBLIC_SANITY_ASSET_CDN_HOST/images/NEXT_PUBLIC_SANITY_PROJECT_ID/NEXT_PUBLIC_SANITY_DATASET/d40d4c63b117e248ec11b995951aa738969531aa-54x54.png?w=64&h=64&fm=webp&q=80&fit=clip&auto=format 1x, https://NEXT_PUBLIC_SANITY_ASSET_CDN_HOST/images/NEXT_PUBLIC_SANITY_PROJECT_ID/NEXT_PUBLIC_SANITY_DATASET/d40d4c63b117e248ec11b995951aa738969531aa-54x54.png?w=128&h=128&fm=webp&q=80&fit=clip&auto=format 2x"
                          style="color: transparent;"
                          width="54"
                        />
                        <div
                          class="sc-aXZVg sc-gEvEer jPvJsJ bktafW"
                        >
                          <p
                            class="sc-ikkxIA kcINcy"
                          >
                            Tom Rees
                          </p>
                          <p
                            class="sc-ikkxIA jkEPvG"
                          >
                            CEO
                            , 
                            Ormiston Academies Trust
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
